--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,11 @@
-/* VARIABLES */
-:root {
-  /* COLOR */
-  --color-content-bg: #000;
+:root
+{
+  --color-almostblack: #020202;
+  --color-footer: #fff;
 }
 
-body { font-family: 'SourceSansPro_Regular'; background:#020202; margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
+body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almostblack); margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
 a { cursor: pointer; }
-hr { clear: both; }
 
 /* main */
 #header { -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; }
@@ -17,7 +16,7 @@ hr { clear: both; }
 
 #content { display: block; position: relative; min-height: calc(20vh); padding: 40px 40px 100px 40px; }
 
-#footer { display: block; background-color: #fff; padding: 0px 40px; }
+#footer { display: block; background-color: var(--color-footer); padding: 0px 40px; }
 #footerwrap { display: block; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
 #footerwrap .logo { display: block; width: 30px; height: 30px; background-color: #000; margin: none; float: left;}
 #footerwrap .credit { display: inline-block;  margin-left: 20px; font-size: 14px; }
@@ -30,7 +29,8 @@ hr { clear: both; }
 #stats { display: block; margin: 50px auto 20px auto; padding: 0px 40px; text-align: left; color: #fff; }
 #stats #stat { display: inline-block; margin: 0px 10px 10px 0px; background-color: #fff; color: #000; padding: 4px 8px; max-width: 100px}
 #stats #stat:hover { background-color: #1f1f1f; color: #fff; cursor: pointer; }
-#stats .tag { font-family: 'SourceSansPro_Regular'; font-size: 1em; color: #999999; margin-left: 6px; }
+#stats .tag { display: inline-block; margin: 3px 3px; font-family: 'SourceSansPro_Regular'; font-size: 1em; color: #999999; }
+#stats .tag:hover { color: #000; background-color: #999999; }
 
 #logheading {  display: block; margin: 0px auto 30px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-size: 2em; font-family: 'SourceSansPro_Bold' }
 
@@ -42,13 +42,11 @@ hr { clear: both; }
 .entry .pict { background-position: center; background-size:cover; display: inline-block; margin-top: 20px; width: 100%; min-height: calc(100vh * 0.4); -webkit-transition: min-height 0.2s; transition: min-height 0.2s; }
 .entry .pict:hover { cursor: pointer; }
 
-#pagination { display: block; margin: 30px auto 30px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; }
-
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
 #topicblock { display: block; min-width: 20vh; float: left; margin-bottom: 20px; margin-right: 20px;}
-#topicahead { display: block; margin-bottom: 10px; font-size: 20px; font-weight: bold; user-select: none; -moz-user-select: none; -moz-user-select: none; }
+#topichead { display: block; font-family: 'SourceSansPro_Bold'; margin-bottom: 10px; font-size: 20px; user-select: none; -moz-user-select: none; -moz-user-select: none; }
 #topic { display: block; margin: 2px 0px; }
-#topic a:hover { text-decoration: underline; }
+#topic a:hover:after { margin-right: 2px; content: " •"; }
 
 /* lightbox */
 #lightbox { position: fixed; display: inline-flex; width: 100%; height: 100%; top: 0; left: 0; background-color: rgba(0, 0, 0, .8); text-align: center; }
@@ -58,4 +56,3 @@ hr { clear: both; }
 
 /* misc */
 .round { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; }
-.grey { color: #888; }
