--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,28 +2,29 @@
 {
   --color-almostblack: #020202;
   --color-footer: #fff;
+  --svg-fill: #000;
 }
 
 body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almostblack); margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
 a { cursor: pointer; }
 
-/* main */
 #header { -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; }
 #header { display: block; position: relative; width:100%; height:100%; min-height: 90vh; max-height: calc(100vh - 100px); background-color: #000;}
 #header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
+
 .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #logo.sticky { position: absolute; bottom: 20px; top: initial; }
 
 #content { display: block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px; }
 
 #footer { display: block; background-color: var(--color-footer); padding: 0px 40px; }
-#footerwrap { display: block; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #000; }
+#footerwrap { display: block; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
 #footerwrap .logo { display: block; width: 30px; height: 30px; background-color: #000; margin: none; float: left;}
 #footerwrap .credit { display: inline-block;  margin-left: 20px; font-size: 14px; }
 #footerwrap a.icon { background-size: contain; background-repeat: no-repeat; background-position-y: center; display: block; width: 22px; height: 20px; float: right; margin: 10px 0px 0px 20px; }
-#footer a.icon.github { background-image: url("../svg/github.svg"); }
-#footer a.icon.twitter { background-image: url("../svg/twitter.svg"); }
-#footer a.icon.webring { background-image: url("../svg/rotonde.svg"); }
+#footerwrap a.icon.github { background-image: url("../svg/github.svg"); }
+#footerwrap a.icon.twitter { background-image: url("../svg/twitter.svg"); }
+#footerwrap a.icon.webring { background-image: url("../svg/rotonde.svg"); }
 
 /* journal */
 #stats { display: block; margin: 50px auto 20px auto; padding: 0px 40px; text-align: left; color: #fff; }
@@ -31,8 +32,6 @@ a { cursor: pointer; }
 #stats #stat:hover { background-color: #1f1f1f; color: #fff; cursor: pointer; }
 #stats .tag { display: inline-block; margin: 3px 3px; font-family: 'SourceSansPro_Regular'; font-size: 1em; color: #999999; }
 #stats .tag:hover { color: #000; background-color: #999999; }
-
-#description { font-size: 1.3em; display: block; margin-bottom: 30px; text-align: left; color: #fff; }
 
 #logheading {  display: block; margin: 0px auto 30px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-size: 2em; font-family: 'SourceSansPro_Bold' }
 
@@ -64,3 +63,5 @@ a { cursor: pointer; }
 #content p b { font-family: 'SourceSansPro_Bold'; font-weight: normal; }
 #content p b i { font-family: 'SourceSansPro_BoldItalic'; font-weight: normal; font-style: normal; }
 #content p i { font-family: 'SourceSansPro_Italic'; font-style: normal; }
+#content p a { margin-bottom: -2px; display: inline-block; font-family: 'SourceSansPro_Bold'; position: relative; line-height: 90%; transition: all 150ms; border-bottom:1.5px solid transparent; }
+#content p a:hover { border-bottom-color: white }
