--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,13 +15,13 @@ a { cursor: pointer; }
 .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #logo.sticky { position: absolute; bottom: 20px; top: initial; }
 
-#content { display: block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px; }
+#content { display: inline-block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px; }
 
 #footer { display: block; background-color: var(--color-footer); padding: 0px 40px; }
-#footerwrap { display: block; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
-#footerwrap .logo { display: block; width: 30px; height: 30px; background-color: #000; margin: none; float: left;}
-#footerwrap .credit { display: inline-block;  margin-left: 20px; font-size: 14px; }
-#footerwrap a.icon { background-size: contain; background-repeat: no-repeat; background-position-y: center; display: block; width: 22px; height: 20px; float: right; margin: 10px 0px 0px 20px; }
+#footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
+#footerwrap .logo { width: 30px; height: 30px; background-color: #000; margin: none; float: left;}
+#footerwrap .credit { display: inline-block; margin-left: 20px; font-size: 14px; }
+#footerwrap a.icon { width: 20px; height: 30px; margin: 0px 8px; background-size: contain; background-repeat: no-repeat; background-position-y: center; display: block; float: right; }
 #footerwrap a.icon.github { background-image: url("../svg/github.svg"); }
 #footerwrap a.icon.twitter { background-image: url("../svg/twitter.svg"); }
 #footerwrap a.icon.webring { background-image: url("../svg/rotonde.svg"); }
@@ -33,15 +33,12 @@ a { cursor: pointer; }
 #stats .tag { display: inline-block; margin: 3px 3px; font-family: 'SourceSansPro_Regular'; font-size: 1em; color: #999999; }
 #stats .tag:hover { color: #000; background-color: #999999; }
 
-#logheading {  display: block; margin: 0px auto 30px auto; padding: 0px 60px; max-width: 700px; text-align: left; color: #fff; font-size: 2em; font-family: 'SourceSansPro_Bold' }
-
 .entry { border-top: 1px solid #444; display: block; margin: 0px auto 2px auto; padding: 20px 60px; max-width: 700px; text-align: left; color: #fff; }
 .entry .title { display: inline-block; font-family: 'SourceSansPro_Bold'; font-size: 1.2em; font-weight: bold; margin-right: 10px; }
-
-#date { display: inline-block; color: #999999; }
-#note { display: block; text-align: left; }
 .entry .pict { background-position: center; background-size:cover; display: inline-block; margin-top: 20px; width: 100%; min-height: calc(100vh * 0.4); -webkit-transition: min-height 0.2s; transition: min-height 0.2s; }
 .entry .pict:hover { cursor: pointer; }
+#date { display: inline-block; color: #999999; }
+#note { display: block; text-align: left; }
 
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
 #topicblock { vertical-align: top; min-width: 20vh; float: left; margin-bottom: 20px; margin-right: 20px;}
