--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,25 +1,27 @@
 :root
 {
-  --color-almostblack: #020202;
-  --color-footer: #020202;
+  --color-almostblack: #131313;
+  --color-footer: #131313;
+  --color-pale: #e4e4e3; 
+  
   --svg-fill: #fff;
 }
 
-body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almostblack); margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: #fff; }
-a { cursor: pointer; }
+body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almostblack); margin: 0px; padding: 0px; transition: opacity 150ms; opacity: 1 !important; color: var(--color-pale) }
+a { cursor: pointer; color: white; }
 
 #header { -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; }
-#header { display: block; position: relative; width:100%; height:100%; min-height: 90vh; max-height: calc(100vh - 100px); background-color: #000;}
+#header { display: block; position: relative; width:100%; height:100%; min-height: 90vh; max-height: calc(100vh - 100px); background-color: var(--color-almostblack); transition: all 150ms; }
 #header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
 
 .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
 #logo.sticky { position: absolute; bottom: 20px; top: initial; }
 
-#content { display: inline-block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px; }
+#content { display: inline-block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px;  }
 
 #footer { display: block; background-color: var(--color-footer); padding: 0px 40px; }
 #footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
-#footerwrap .logo { width: 30px; height: 30px; background-color: #000; margin: none; float: left;}
+#footerwrap .logo { width: 30px; height: 30px; margin: none; float: left;}
 #footerwrap .credit { display: inline-block; margin-left: 20px; font-size: 14px; }
 #footerwrap a.icon { width: 20px; height: 30px; margin: 0px 8px; background-size: contain; background-repeat: no-repeat; background-position-y: center; display: block; float: right; }
 #footerwrap a.icon.github { background-image: url("../svg/github.svg"); }
