--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ a:hover { color: white; }
 #gallerypic { display: block; width: 10vw; height: calc(10vw * 1.4); background-position: center; background-size:cover; float: left; margin: 10px; }
 
 /* homepage listing */
-#topicblock { vertical-align: top; min-width: 20vh; float: left; margin-bottom: 20px; margin-right: 20px;}
+#topicblock { vertical-align: top; min-width: 200px; float: left; margin-bottom: 20px; margin-right: 20px;}
 #topichead { display: block; font-family: 'SourceSansPro_Bold'; margin-bottom: 10px; font-size: 20px; user-select: none; -moz-user-select: none; -moz-user-select: none; }
 #topic { display: block; margin: 2px 0px; }
 #topic a:after {  content: ""; }
