--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,13 +10,12 @@ body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almos
 a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 
-#header { display: block; position: relative; width:100%; background-color: var(--color-almostblack); -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
-#header { min-height: 90vh; max-height: calc(100vh - 100px); }
-#header .short { min-height: 400px; }
-#header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
+#header { display: block; background-color: var(--color-almostblack); width: 100%; min-height: 100px; }
+#photo { display: block; position: relative; width:100%; height: 90vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
 
-.logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
-#logo.sticky { position: absolute; bottom: 20px; top: initial; }
+.logo { display: block; background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
+#logo .sticky { position: absolute; bottom: 20px; top: initial; }
+#header .logo { position: fixed; width: 80px; height: 80px; top: 20px; left: 20px; }
 
 #footer { display: block; background-color: var(--color-almostblack); padding: 0px 40px; }
 #footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
@@ -62,7 +61,7 @@ a:hover { color: white; }
 /* misc */
 .round { -webkit-border-radius: 2px; -moz-border-radius: 2px; border-radius: 2px; }
 
-#content { display: inline-block; width: 100%; min-height: calc(30vh); padding: 40px 40px 100px 40px;  }
+#content { display: inline-block; width: 100%; padding: 40px 40px 100px 40px;  }
 
 /* sidebar */
 #sidebar { display: block; float: left; width: 200px; height: 100%; padding: 0 0 20px 0; overflow-x: hidden; }
