--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,12 +12,13 @@ body { font-family: 'SourceSansPro_Regular'; background-color: var(--color-almos
 a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 
-#view { min-height:100%; position:relative; }
+#view { min-height:100%; position:relative; transition: all 200ms; }
 #header { display: block; background-color: var(--color-almostblack); width: 100%; min-height: 120px; }
 #header #photo { display: block; position: relative; width:100%; height: 90vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
         .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
-#header .logo { display: block; position: fixed; width: 40px; height: 40px; top: 42px; left: 42px; }
+#header .logo { display: block; position: fixed; width: 35px; height: 35px; top: 42px; left: 42px; }
 #header .logo .sticky { position: absolute; bottom: 20px; top: initial; }
+#header iframe { width: 100%; height: 100%; overflow: hidden; }
 
 #footer { display: block; position:absolute; bottom: 0; width: 100%; background-color: var(--color-almostblack); padding: 0px 40px; }
 #footerwrap { display: inline-block; width: 100%; padding: 40px 0px; margin: 0px; max-width: 100%; font-size: 20px; color: #fff; }
@@ -77,8 +78,8 @@ a:hover { color: white; }
 #content p b { font-family: 'SourceSansPro_Bold'; font-weight: normal; }
 #content p b i { font-family: 'SourceSansPro_BoldItalic'; font-weight: normal; font-style: normal; }
 #content p i { font-family: 'SourceSansPro_Italic'; font-style: normal; }
-#content p a { color: var(--color-accent); margin-bottom: -2px; display: inline-block; font-family: 'SourceSansPro_Bold'; position: relative; line-height: 90%; transition: all 150ms; border-bottom:1px solid transparent; }
-#content p a:hover { border-bottom-color: var(--color-accent) }
+#content p a, #content list ln a { color: var(--color-accent); margin-bottom: -2px; display: inline-block; font-family: 'SourceSansPro_Bold'; position: relative; line-height: 90%; transition: all 150ms; border-bottom:1px solid transparent; }
+#content p a:hover, #content list ln a:hover { border-bottom-color: var(--color-accent) }
 
 #content iframe { display: block; margin: 20px 0px 40px 0px; overflow: hidden;}
 
@@ -89,6 +90,7 @@ a:hover { color: white; }
 
 #content list { display: block; position: relative; margin: 10px 0px; padding-left:30px; }
 #content list ln { display: list-item; line-height: 1.3em; font-size: 1.4em; position: relative; list-style: circle; }
+#content list ln a
 
 /* widths */
 @media only screen and (max-width: 1440px)
