--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,11 +90,10 @@ a:hover { color: white; }
 
 #content list { display: block; position: relative; margin: 10px 0px; padding-left:30px; }
 #content list ln { display: list-item; line-height: 1.3em; font-size: 1.4em; position: relative; list-style: circle; }
-#content list ln a
 
 /* widths */
 @media only screen and (max-width: 1440px)
 {
   #sidebar { width: 100%; }
-  #presentation { margin-left: 0px; margin-right: 0px; }
+  #content #presentation { margin-left: 0px; margin-right: 0px; }
 }
