--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,11 +13,11 @@ a { cursor: pointer; color: var(--color-pale); }
 a:hover { color: white; }
 
 #view { min-height:100%; position:relative; transition: all 200ms; }
-#header { display: block; background-color: var(--color-almostblack); width: 100%; min-height: 120px; }
+#header { display: block; position: relative; background-color: var(--color-almostblack); width: 100%; min-height: 120px; }
 #header #photo { display: block; position: relative; width:100%; height: 90vh; max-height: 1080px; -webkit-background-size: cover, cover; -moz-background-size: cover, cover; background-size: cover, cover; -o-background-size: cover, cover; background-position: center center, bottom center; background-repeat: no-repeat, no-repeat; transition: all 150ms; }
         .logo { background-image: url("../svg/nm.svg"); background-size: contain; background-repeat: no-repeat; background-position-y: center; }
-#header .logo { display: block; position: fixed; width: 35px; height: 35px; top: 42px; left: 42px; }
-#header .logo .sticky { position: absolute; bottom: 20px; top: initial; }
+#header #logo { display: block; position: fixed; z-index: 200; width: 35px; height: 35px; top: 40px; left: 40px; }
+#header #logo.sticky { position: absolute; top: initial; bottom: 44px }
 #header iframe { width: 100%; height: 100%; overflow: hidden; }
 
 #footer { display: block; position:absolute; bottom: 0; width: 100%; background-color: var(--color-almostblack); padding: 0px 40px; }
